# qt_modules

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
